AC_INIT(zimreader, 0.92, [Tommi Maekitalo <tommi@tntnet.org>])
AM_INIT_AUTOMAKE([subdir-objects])

abi_current=1
abi_revision=0
abi_age=0
sonumber=${abi_current}:${abi_revision}:${abi_age}
AC_SUBST(sonumber)

AC_CONFIG_HEADERS([src/config.h])
AC_CONFIG_SRCDIR([src/main.cpp])

AC_PROG_CXX
AC_PROG_LIBTOOL

AC_LANG(C++)

AC_CHECK_HEADER([zim/file.h], , AC_MSG_ERROR([zimlib headers not found]))
AC_CHECK_HEADER([tnt/tntnet.h], , AC_MSG_ERROR([tntnet headers not found]))

AC_COMPILE_IFELSE([
    #include <zim/article.h>
    void foo() { zim::Article a; a.getUrl(); }
    ],,
    AC_MSG_ERROR([zimlibrary do not work - please update]))

# output
AC_CONFIG_FILES([
  Makefile
  src/Makefile
  ])

AC_OUTPUT
